--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <h2>Contact</h2>
   <p>
-    If you have any questions, contact: <strong>support@merchzon.net</strong>
+    If you have any questions, contact: <strong>merchzon.contact@gmail.com</strong>
   </p>
 </body>
 </html>
